# binfinder

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
src/binfinder/: __init__.py  __main__.py
src/binfinder/config/: __init__.py  paths.py
src/binfinder/helpers/: __init__.py  camera.py
tests/: __init__.py  __main__.py  main_rt.py
